--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.12"
+    "lightningcss": "1.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -34,7 +35,7 @@
     "rollup": "^4.18.0",
     "vite": "^7.1.2"
   },
-  "engines": {
-    "node": "22.x"
-  }
+ "engines": {
+  "node": "24.x"
+}
 }
